[tool.black]
line-length = 110
target-version = ['py38']

[tool.poetry]
name = 'acceptance'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytest = "7.1.3"
c2cwsgiutils = "5.1.9"
boltons = "23.1.1"
netifaces = "0.11.0"
requests = "2.32.5"
lxml = "4.9.4"
certifi = "2024.7.4"
OWSLib = "0.29.3"
urllib3 = "2.6.2"
idna = "3.7"
