[tool.black]
line-length = 110
target-version = ['py38']

[tool.poetry]
name = 'acceptance'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytest = "9.0.3"
c2cwsgiutils = "6.0.9"
boltons = "23.1.1"
netifaces = "0.11.0"
requests = "2.33.0"
lxml = "6.1.0"
certifi = "2024.7.4"
OWSLib = "0.29.3"
urllib3 = "2.6.3"
pillow = "12.2.0"
idna = "3.7"
ujson = "5.12.0"
