[tool.black]
line-length = 110
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
python_version = "3.12"
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
strict = true

[tool.poetry]
name = 'acceptance'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pytest = "9.1.1"
c2cwsgiutils = "6.1.9"
boltons = "25.0.0"
netifaces = "0.11.0"
requests = "2.34.2"
lxml = "6.1.1"
certifi = "2026.6.17"
OWSLib = "0.36.0"
